@@ -12,6 +12,7 @@
 <!ENTITY exo-wrap-table SYSTEM "xml/exo-wrap-table.xml">
 <!ENTITY exo-gdk-pixbuf-extensions SYSTEM "xml/exo-gdk-pixbuf-extensions.xml">
 <!ENTITY exo-gobject-extensions SYSTEM "xml/exo-gobject-extensions.xml">
+<!ENTITY exo-gtk-extensions SYSTEM "xml/exo-gtk-extensions.xml">
 <!ENTITY exo-pango-extensions SYSTEM "xml/exo-pango-extensions.xml">
 <!ENTITY exo-config SYSTEM "xml/exo-config.xml">
 <!ENTITY exo-binding SYSTEM "xml/exo-binding.xml">
@@ -204,6 +205,7 @@
     <title>Extensions to existing frameworks</title>
     &exo-gdk-pixbuf-extensions;
     &exo-gobject-extensions;
+    &exo-gtk-extensions;
     &exo-pango-extensions;
   </part>
 
