@@ -242,6 +242,13 @@ exo_g_value_transform_negate
 </SECTION>
 
 <SECTION>
+<FILE>exo-gtk-extensions</FILE>
+<TITLE>Extensions to Gtk</TITLE>
+exo_gtk_object_ref_sink
+exo_gtk_radio_action_set_current_value
+</SECTION>
+
+<SECTION>
 <FILE>exo-pango-extensions</FILE>
 <TITLE>Extensions to Pango</TITLE>
 ExoPangoEllipsizeMode
