@@ -1,0 +1,39 @@
+<!-- ##### SECTION Title ##### -->
+Extensions to Gtk
+
+<!-- ##### SECTION Short_Description ##### -->
+Miscelleanous extensions to the Gtk+ library.
+
+<!-- ##### SECTION Long_Description ##### -->
+<para>
+
+</para>
+
+
+<!-- ##### SECTION See_Also ##### -->
+<para>
+
+</para>
+
+
+<!-- ##### SECTION Stability_Level ##### -->
+Stable
+
+<!-- ##### FUNCTION exo_gtk_object_ref_sink ##### -->
+<para>
+
+</para>
+
+@object: 
+@Returns: 
+
+
+<!-- ##### FUNCTION exo_gtk_radio_action_set_current_value ##### -->
+<para>
+
+</para>
+
+@action: 
+@current_value: 
+
+
