@@ -104,6 +104,7 @@ exo_g_value_transform_negate
 #if IN_HEADER(__EXO_GTK_EXTENSIONS_H__)
 #if IN_SOURCE(__EXO_GTK_EXTENSIONS_C__)
 exo_gtk_object_destroy_later
+exo_gtk_object_ref_sink
 exo_gtk_radio_action_set_current_value
 #endif
 #endif
